two-lines-renderer: Simplify code

The PangoLayouts are only needed for gd_two_lines_renderer_get_size,
which can prepare them itself.

https://bugzilla.gnome.org/show_bug.cgi?id=792665